--- a/custom_components/cometblue/manifest.json
+++ b/custom_components/cometblue/manifest.json
@@ -4,5 +4,5 @@
   "documentation": "https://github.com/neffs/ha-cometblue",
   "dependencies": [],
   "codeowners": ["@neffs"],
-  "requirements": ["cometblue_lite==0.2"]
+  "requirements": ["cometblue_lite==0.3rc2"]
 }
