--- a/custom_components/cometblue/manifest.json
+++ b/custom_components/cometblue/manifest.json
@@ -4,6 +4,6 @@
   "documentation": "https://github.com/neffs/ha-cometblue",
   "dependencies": [],
   "codeowners": ["@neffs"],
-  "requirements": ["cometblue_lite==0.3.2"]
+  "requirements": ["cometblue_lite==0.3.2"],
   "version": "0.0.3"
 }
